--- a/src/css/geriatrico.css
+++ b/src/css/geriatrico.css
@@ -21,7 +21,7 @@
 }
 
 /* Título */
-.title {
+.titulo {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
@@ -130,7 +130,7 @@
     color: red;
 }
 
-.title-input {
+.titulo-input {
     display: flex;         /* Usa flexbox */
     align-items: center;   /* Alinea elementos verticalmente */
     justify-content: space-between; /* Espacia los elementos */
@@ -138,7 +138,7 @@
     margin-bottom: 20px;   /* Espacio inferior */
 }
 
-.title {
+.titulo {
     margin: 0;             /* Elimina márgenes para mejor alineación */
     font-size: 24px;       /* Ajusta el tamaño si es necesario */
 }
@@ -153,6 +153,16 @@
 }
 
 /*Button*/
+ .button-geriatrico {
+    max-width: 200px;      /* Ajusta el ancho del input */
+    padding: 8px;
+    left: 25px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: all 0.3s ease-in-out; /* Suaviza la transición de color */
+}
+
 .details-button{
     transition: background 0.3s ease-in-out;
     background: #007BFF;
@@ -173,7 +183,7 @@
     opacity: 0;  /* Ocultamos por defecto */
     transition: opacity 0.3s ease;
 }
-.actions button {
+.actions .toggle-button, .edit-button {
     background: rgba(0, 0, 0, 0.7);
     border: none;
     padding: 5px 8px;
@@ -181,13 +191,21 @@
     cursor: pointer;
     transition: background 0.3s ease;
 }
-.actions button:hover {
+.actions .toggle-button, .edit-button:hover {
     background: rgba(0, 0, 0, 1);
 }
 .edit-button {
     background: #007bffcc; /* Azul */
 }
 
+.toggle-button :active {
+    background: #ffcc00cc; /* Amarillo */
+}
+
+.actions.toggle-button:hover {
+    background-color: #ffcc00;
+    transform: scale(1.1);
+}
 .edit-button:hover {
     background-color: #007bff;
     transform: scale(1.1);
@@ -212,7 +230,7 @@
 
 .content-modal{
     position: static;
-    width: 25%;
+    width: 40%;
     background: #e9e9e9;
     padding: 5px;
     margin: 7rem;
