--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -10,7 +10,7 @@
     position: relative;
 }
 
-img {
+.building-image {
     width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
     height: 100%; /* Asegura que la imagen ocupe toda la altura del contenedor */
     object-fit: cover; /* Mantiene las proporciones de la imagen y rellena el contenedor */
@@ -24,10 +24,10 @@ img {
     margin-bottom: 55px;
 }
 
-.logo {
-    color: white;
-    font-size: 32px;
-    font-weight: 600;
+.logo-img{
+    padding-top: 12px;
+    width: 250px;
+    height: 100px;
 }
 
 .action-buttons {
@@ -65,8 +65,8 @@ img {
     padding-right: 100px;
 }
 
-.hero-text h1 {
-    font-size: 48px;
+.hero-title {
+    font-size: 32px;
     margin-bottom: 24px;
     line-height: 1.2;
     font-weight: 600;
@@ -74,9 +74,9 @@ img {
     margin-top: 70px;
 }
 
-.hero-text p {
+.hero-text .hero-description {
     opacity: 0.8;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1.6;
     font-weight: 300;
 }
@@ -103,11 +103,11 @@ img {
     box-shadow: 4px 6px 20px 5px rgba(0, 0, 0, 0.242);    
 }
 
-.building-card img{
+.building-card .building-image{
 margin-left: -25px;
 }
 
-.building-content h2 {
+.building-content .building-title {
     font-size: 36px;
     margin-bottom: 35px;
     max-width: 350px;
@@ -117,10 +117,13 @@ margin-left: -25px;
 }
 
 .building-title{
-    left: 25rem;
+    top: 7.5rem;
+    left: 33rem;
     padding: 100px;
     color: white;
     position: absolute;
+    letter-spacing: -2.5px;
+    line-height: 1.3;
 }
 
 .buttons-group {
@@ -142,7 +145,7 @@ margin-left: -25px;
     transition: all 0.3s ease;
 }
 
-.button i {
+.button .i {
     font-size: 24px;
 }
 
@@ -193,10 +196,11 @@ margin-left: -25px;
 }
 
 .stat2-card {
-    background-image: url('/Pacient.jpg');
+    background-image: url('/Admin.jpg');
+    background-repeat: no-repeat;
 }
 
-.stat3-card,
+.stat2-card,
 .stat4-card {
     box-sizing: border-box;
     background: #2A80E9;
@@ -215,7 +219,7 @@ margin-left: -25px;
     box-shadow: 4px 6px 20px 5px rgba(0, 0, 0, 0.242);  
 } 
 
-.stat-info h3 {
+.stat-info .stat-title {
     color: #3d3d3d;
     font-size: 23px;
     margin-bottom: 0px;
@@ -253,7 +257,7 @@ margin-left: -25px;
     top: 130px;
     left: 235px;    
 }
-.stat2-info h3 {
+.stat2-info .stat-title {
     color: #E9E9E9;
     font-size: 23px;
     margin-bottom: 0px;
@@ -310,7 +314,6 @@ margin-left: -25px;
     position: fixed;
     bottom: 35px;
     left: 55px;
-    background-color: #E9E9E9;
     padding: 20px 40px;
     border-radius: 20px;
     display: flex;
@@ -323,14 +326,12 @@ margin-left: -25px;
 }
 
 .user-avatar {
-    color: #3d3d3d;
     font-size: 20px;
 }
 
 .user-name {
     font-size: 17px;
     font-weight: 600;
-    color: #3d3d3d;
 }
 
 .picture {
