--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,26 +1,89 @@
-/* .logo-home{
-    color: #3D3D3D;
-} */
- .navbar {
-    position: fixed;
-    top: 0;
-    left: 200px; /* Debe coincidir con el ancho de la sidebar */
-    width: calc(100% - 200px); /* Ajustar el ancho para que no se superponga con la sidebar */
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 30px;
-    background-color: #ECECEC;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 999;
+.bodyHome{
+    margin: 0;
+    background-color: #ffffff;
+    color: #474747;
+    font-family: Poppins;
+    font-size: 12px;
+    overflow-x: hidden;
 }
+/*  Navbar Styles */
+.navbar {
+    background-color: #fff;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.192);
+    position: relative;
+    top: 0;
+    height: 110px;
+    width: 100%;
+    z-index: 100;
+    transition: box-shadow 0.3s ease; /* Transición para sombra */
+}
+
+.navbar:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más intensa al pasar el mouse */
+}
+
+.navbar-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.select{
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 15px;
+    display: flex;
+    margin-left: 10px;
+}
+.dropdown-button {
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    z-index: 1;
+    border-radius: 5px;
+}
+
+.dropdown-content option {
+    color: #3d3d3d;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.3s ease; 
+}
+
+.dropdown-content option:hover {
+    background-color: #ddd; 
+}
+
+.dropdown:hover .dropdown-content {
+    display: block; /* Mostrar contenido del dropdown al pasar el mouse */
+}
+
+.space {
+    flex-grow: 1; 
+}
+
 .user-home{
     color: white;
     font-size: 10px;
     margin-right: 2px;
     cursor: pointer;
 }
+
 .nav-links {
     display: flex;
     gap: 40px;
@@ -29,211 +92,244 @@
     font-size: 18px;
     align-items: center;
 }
-/* .enlaces{
-    color: #0090BC;
-}
-.nav-links li {
-    cursor: pointer;
-    transition: color 0.3s;
-    font-weight: 600;
-}
 
-.nav-links li:hover {
-    color: #0090BC;
-}
-.link-nav{
-    text-decoration: none;
-    color: #3D3D3D;
-}
-.link-nav:hover {
-    color: #007BFF; 
-    transform: scale(1.1); 
-}
-.slide{
-    background-image: url('/carrusel.jpg');
-    transition: transform 0.3s ease-in-out;
-}
-.slide1{
-    background-image: url("/Bg.jpg");
-    transition: transform 0.3s ease-in-out;
-}
-.slide:hover  {
-    transform: scale(1.1);
-}
-
-.slide1:hover  {
-    transform: scale(1.1);
-}
-.swiper {
-    width: 100%;
-    height: 80vh;
-}
-.swiper-slide {
+.carousel{
+    height: 100vh;
+    margin-top: -50px;
+    width: 100vw;
+    overflow: hidden;
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    background-size: cover;
-    background-position: center;
-} */
-/* .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
+}
+
+.carousel .carousel-list .carousel-item{
     width: 100%;
     height: 100%;
-    background-color: #0090bc00;
-    background-size: cover;
-/* } */
-/*
-.content {
-    position: relative;
-    text-align: center;
+    position: absolute;
+    inset: 0 0 0 0;
+}
+
+.carousel .carousel-list .carousel-item{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.carousel .carousel-list .carousel-item .carousel-content{
+    position: absolute;
+    top: 20%;
+    width: 1140px;
+    max-width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-right: 30%;
+    box-sizing: border-box;
+    color: #fff;
+    text-shadow: 0 5px 10px #0004;
+}
+
+.carousel .carousel-list .carousel-item .carousel-author{
+    font-weight: bold;
+    letter-spacing: 10px;
+}
+
+.carousel .carousel-list .carousel-item .carousel-title,
+.carousel .carousel-list .carousel-item .carousel-topic{
+    font-size: 4em;
+    font-weight: bold;
+    line-height: 1.3em;
+}
+
+.carousel .carousel-list .carousel-item .carousel-topic{
+    color: #3d3d3d;
+}
+
+.carousel .carousel-list .carousel-item .carousel-buttons{
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    grid-template-rows: 40px;
+    gap: 5px;
+    margin-top: 20px;
+}
+
+.carousel .carousel-list .carousel-item .carousel-buttons .button{
+    border: none;
+    background-color: #eee;
+    letter-spacing: 3px;
+    font-weight: 400;
+    height: 45px;
+}
+
+
+.carousel .carousel-list .carousel-item .carousel-buttons .button:nth-child(2){
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #eee;
+}
+
+.carousel .carousel-list .carousel-item:nth-child(1){
     z-index: 1;
 }
-.content h2 {
-    font-size: 48px;
-    font-weight: bold;
-    position: static;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.logo-container {
+    position: absolute;
+    top: 40%; /* Ajusta este valor para subir el logo */
+    right: 10%;
+    transform: translate(120%, -50%);
 }
-.content p {
-    font-size: 18px;
-    position: static;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.logo-overlay {
+    left: -200px;
 }
-.read-more {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: white;
-    color:#3D3D3D;
-    font-weight: bold;
+
+.carousel-description{
+    margin-top: 10px; 
+    font-size: 15px;
+}
+
+/* animation text in first item */
+
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-author,
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-title,
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-topic,
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-description,
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-buttons
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-text
+
+
+{
+    transform: translateY(50px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent .2s 1s linear 1 forwards;
+}
+
+@keyframes showContent{
+    to{
+        transform: translateY(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-title{
+    animation-delay: 1.2s!important;
+}
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-topic{
+    animation-delay: 1.4s!important;
+}
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-description{
+    animation-delay: 1.6s!important;
+}
+.carousel .carousel-list .carousel-item:nth-child(1) .carousel-content .carousel-buttons{
+    animation-delay: 1.8s!important;
+}
+/* create animation when next click */
+.carousel.next .carousel-list .carousel-item:nth-child(1) img{
+    width: 150px;
+    height: 220px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
     border-radius: 30px;
-    cursor: pointer;
-    border: none;
-}*/
-/* Sección About */
-/* .about {
-    padding: 60px 20px;
-    text-align: center;
-    background: #f9f9f9;
+    animation: showImage .5s linear 1 forwards;
 }
-.about h2 {
-    font-size: 36px;
-    margin-bottom: 10px;
-    position: static;
+
+@keyframes showImage{
+    to{
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+
+@media screen and (max-width: 678px) {
+    .carousel .carousel-list .carousel-item .carousel-content{
+        padding-right: 0;
+    }
+    .carousel .carousel-list .carousel-item .carousel-content .carousel-title{
+        font-size: 30px;
+    }
+}
+
+.carousel-description {
+    margin-top: 20px; 
+    font-size: 15px;
+}
+
+/*  Navbar Styles */
+.navbar {
+    background-color: #fff;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.192);
+    position: relative;
+    top: 0;
+    height: 110px;
+    width: 100%;
+    z-index: 100;
+    transition: box-shadow 0.3s ease; /* Transición para sombra */
+}
+
+.navbar:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más intensa al pasar el mouse */
+}
+
+.navbar-container {
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-.about p {
-    max-width: 600px;
-    margin: 0 auto;
-    line-height: 1.6;
-    position: static;
-} */
-/* Sección Footer */
-
-/*.footer {
-    background-color: #00151c;
-    color: white;
-    padding: 40px;
-    display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-
-}
-.footer div {
-    flex: 1;
-    min-width: 200px;
-    margin: 10px;
-}
-.footer h3 {
-    font-size: 16px;
-    font-weight: bold;
-    position: static;
-}
-.footer p {
-    font-size: 14px;
-    color: white;
-    text-decoration: none;
-    position: static;
-}
-
-.whatsapp {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    background-color: #25d366;
-    color: white;
-    padding: 10px;
-    border-radius: 50%;
-    font-size: 24px;
-}
-.scroll-up {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #007bff;
-    color: white;
-    padding: 10px;
-    border-radius: 50%;
-    font-size: 24px;
-    cursor: pointer;
-}
-.iniciar{
-    border-radius: 1px solid #3D3D3D;
-    color: #3D3D3D;
     padding: 10px 20px;
-    background-color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-    transition: background-color 0.3s ease;
-} */
-
-.sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 200px; /* Ajusta el ancho según necesites */
-    height: 100vh;
-    background: #ECECEC;
-    box-shadow: 1px 0 2px rgba(0, 0, 0, 0.1);
-    overflow-y: auto;
-    padding: 10px;
-    z-index: 1000;
 }
-.custom-select-wrapper{
+
+/* Dropdown Styles */
+.dropdown {
     position: relative;
     display: inline-block;
-    padding-top: 7px;
 }
-.custom-select {
-    width: 205px;
-    padding: 7px;
-    margin: -5px ;
-    font-size: 13px;
-    border: 2px solid #007bff;
+
+.dropdown-button {
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
     border-radius: 5px;
-    background-color: #f8f9fa;
-    color: #333;
+    display: flex;
+    align-items: center;
+    transition: background-color 0.3s ease; /* Transición para el fondo del botón */
 }
 
-.custom-select:hover {
-    border-color: #0056b3;
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 9px 18px rgba(0, 0, 0, 0.214);
+    z-index: 1;
+    border-radius: 5px;
 }
 
-.custom-select:focus {
-    outline: none;
-    border-color: #004085;
-    box-shadow: 0 0 5px rgba(0, 91, 187, 0.5);
+.dropdown-content option {
+    color: #3d3d3d;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.3s ease; 
 }
+
+.dropdown-content option:hover {
+    background-color: #ddd; 
+}
+
+.dropdown:hover .dropdown-content {
+    display: block; /* Mostrar contenido del dropdown al pasar el mouse */
+}
+
+
+.space {
+    flex-grow: 1; 
+}
+
+
 
 .btn-logout{
     border-radius: 1px solid #3D3D3D;
@@ -264,7 +360,7 @@
 
 .change-password-text {
     font-size: 14px;
-    position: fixed; /* Ahora respeta el flujo normal */
+    position: absolute; /* Ahora respeta el flujo normal */
     color: #3D3D3D;
     cursor: pointer;
     transition: color 0.2s ease-in-out;
