--- a/src/css/pacientes.css
+++ b/src/css/pacientes.css
@@ -1,6 +1,6 @@
 
 .bodyPaciente {
-    background: linear-gradient(120deg, #bbbbbb 25%, #e9e9e9 50%);
+    /* background: linear-gradient(120deg, #bbbbbb 25%, #e9e9e9 50%); */
     min-height: 100vh;
     display: flex;
     justify-content: center;
