--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -140,9 +140,10 @@
     margin: 12px;
   }
 .profile-img{
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin-right: 20px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
