--- a/src/css/sedeEspecifica.css
+++ b/src/css/sedeEspecifica.css
@@ -9,158 +9,53 @@
     padding-top: 120px; /* Añadido para bajar el contenedor */
 }
 
-.background-circle-sedEspe {
-    position: absolute;
-    width: 600px;
-    height: 600px;
-    background-color: #33B0D7;
-    border-radius: 50%;
-    box-shadow: -30px -15px 30px 5px #ffffff86,
-    30px 15px 40px 15px#0000003d,
-    inset 15px 15px 45px 10px #0000002c,
-    inset -15px -15px 45px 15px #ffffff68;
-    z-index: 1;
-}
-
-.circle-left-sedEspe {
-    left: -250px;
-}
-
-.circle-right-sedEspe {
-    right: -250px;
-    top: 240px;
-}
-
-.header-sedEspe {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    right: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-}
-
-.app-name {
-    color: white;
-    font-size: 24px;
-    font-weight: 500;
-}
-
-.logo-sedEspe {
-    width: 100px;
-    height: 100px;
-    object-fit: contain;
-    margin-right: 20px;
-}
-
-.container {
-    background-color: rgb(255, 255, 255);
-    border-radius: 20px;
-    padding: 30px;
-    width: 90%;
-    max-width: 550px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 20px; /* Añadido espacio adicional desde el header */
-    height: 700px;
-    
-
-.sede-title {
-    font-size: 28px;
-    margin-bottom: 30px;
-    color: #333;
-    font-weight: 600;
-    margin-left: 20px;
-    top: 10px;
+.grid-item-sede{
     position: relative;
-    text-align: center;
-}
-
-.cont {
-    background-color: rgb(226, 226, 226);
-    max-width:1000px;
-    height: 100%;
-    border-radius: 20px;
-}
-
-.sede-card {
-    background-color: #fff;
-    border-radius: 15px;
-    padding: 15px;
-    margin-bottom: 15px;
+    overflow: hidden;
+    background-image: url('/public/Bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 0.5rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #e0e0e0;
-    transition: transform 0.2s;
-    margin-left: 20px;
-    margin-right: 20px;
-    height: 100px;
-}
-
-.sede-card:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
-
-.sede-card:active {
-    border: 2px solid #4BB6C2;
-}
-
-.sede-icon {
-    background-color: #f5f5f5;
-    padding: 12px;
-    border-radius: 10px;
-    margin-right: 15px;
-    width: 45px;
-    height: 45px;
-    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.sede-icon i {
-    font-size: 20px;
-    color: #666;
-}
-
-.sede-info {
-    flex-grow: 1;
+    height: 150px;
+    width: 300px;
+    cursor: pointer;
 }
 
 .sede-name {
-    font-size: 20px;
-    color: #666;
+    font-size: 27px;
+    color:#333;
     margin-bottom: 5px;
     font-weight: 500;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
 }
 
-.pacientes {
-    font-size: 16px;
-    font-weight: 600;
-    color: #333;
+.sede-title{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 23px;
+    color: #e9e9e9;
+    font-weight: 300;
 }
-
-.status-icon {
-    color: #4BB6C2;
-    font-size: 20px;
-}
-
-
-.status-icon i {
-    font-size: 18px;
-    color: #4BB6C2;
-}}
 
 @media screen and (max-height: 700px) {
     .bodySedeEspecifica {
         padding-top: 70px;
     }
 
-    .container {
-        margin-top: 0;
-    }
+    
 }
 
 /* Media Queries para evitar hover en dispositivos táctiles */
